--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -231,5 +231,6 @@
     <system:String x:Key="GamePuyoPuyoTetris2">Puyo Puyo Tetris 2</system:String>
     <system:String x:Key="GameTokyo2020">Olympic Games Tokyo 2020</system:String>
     <system:String x:Key="GameSonicColorsUltimate">Sonic Colors: Ultimate</system:String>
+    <system:String x:Key="GameSonicOrigins">Sonic Origins</system:String>
 
 </ResourceDictionary>
