--- a/HedgeModManager/Languages/es-MX.xaml
+++ b/HedgeModManager/Languages/es-MX.xaml
@@ -4,24 +4,24 @@
   xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- Common UI Strings -->
-    <system:String x:Key="CommonUIClose"  >Cerrar</system:String>
-    <system:String x:Key="CommonUIOK"     >OK</system:String>
-    <system:String x:Key="CommonUICancel" >Cancelar</system:String>
-    <system:String x:Key="CommonUIYes"    >Si</system:String>
+    <system:String x:Key="CommonUIClose"   >Cerrar</system:String>
+    <system:String x:Key="CommonUIOK"      >OK</system:String>
+    <system:String x:Key="CommonUICancel"  >Cancelar</system:String>
+    <system:String x:Key="CommonUIYes"     >Si</system:String>
     <system:String x:Key="CommonUIBlocked" >Bloqueado</system:String>
-    <system:String x:Key="CommonUINo"     >No</system:String>
-    <system:String x:Key="CommonUIRetry"  >Reintentar</system:String>
-    <system:String x:Key="CommonUIUpdate" >Actualizar</system:String>
+    <system:String x:Key="CommonUINo"      >No</system:String>
+    <system:String x:Key="CommonUIRetry"   >Reintentar</system:String>
+    <system:String x:Key="CommonUIUpdate"  >Actualizar</system:String>
     <system:String x:Key="CommonUIDownload">Descargar</system:String>
-    <system:String x:Key="CommonUIDelete" >Borrar</system:String>
-    <system:String x:Key="CommonUINone"   >Ninguno</system:String>
-    <system:String x:Key="CommonUIIgnore" >Ignorar</system:String>
-    <system:String x:Key="CommonUIWarning">ADVERTENCIA</system:String>
-    <system:String x:Key="CommonUIError"  >ERROR</system:String>
+    <system:String x:Key="CommonUIDelete"  >Borrar</system:String>
+    <system:String x:Key="CommonUINone"    >Ninguno</system:String>
+    <system:String x:Key="CommonUIIgnore"  >Ignorar</system:String>
+    <system:String x:Key="CommonUIWarning" >ADVERTENCIA</system:String>
+    <system:String x:Key="CommonUIError"   >ERROR</system:String>
 
     <!-- Main UI Strings -->
     <system:String x:Key="MainUIMods"          >Modificaciones</system:String>
-    <system:String x:Key="MainUICodes"         >Trucos</system:String>
+    <system:String x:Key="MainUICodes"         >Códigos</system:String>
     <system:String x:Key="MainUISettings"      >Configuración</system:String>
     <system:String x:Key="MainUIAddMod"        >Añadir Mod</system:String>
     <system:String x:Key="MainUIRefreshModList">Refrescar lista de Mods</system:String>
@@ -29,7 +29,7 @@
     <system:String x:Key="MainUISaveAndPlay"   >Guardar y Jugar</system:String>
     <system:String x:Key="MainUIConfigureMod"  >Configurar Mod</system:String>
     <system:String x:Key="MainUIMLDownloadFail">Descarga del cargador de mods fallida</system:String>
-    <system:String xml:space="preserve" x:Key="MainUIMLInstallFail">Error al instalar cargador de mods.&#x0a;Asegúrate de tener permiso para escribir archivos de juego.</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMLInstallFail">Error al instalar cargador de mods.&#x0a;Asegúrate de tener permisos para escribir los archivos del juego.</system:String>
     <system:String xml:space="preserve" x:Key="MainUIMLUninstallFail">Error al desinstalar cargador de mods.&#x0a;Asegúrate de que ningún juego este abierto.</system:String>
 
     <!-- Mods UI Strings -->
@@ -53,8 +53,8 @@
     <system:String x:Key="ModsUIFeatureUpdateBlocked">Este mod tiene bloqueado buscar actualizaciones.</system:String>
     <system:String x:Key="ModsUIFeatureSave"         >Este mod utiliza redirección de partida guardada.</system:String>
     <system:String x:Key="ModsUIFeatureSaveDisable"  >Este mod no utiliza redirección de partida guardada</system:String>
-    <system:String x:Key="ModsUIFeatureCode"         >Este mod utiliza cambios al código del juego.</system:String>
-    <system:String x:Key="ModsUIFeatureCodeDisable"  >Este mod no utiliza cambios al código del juego.</system:String>
+    <system:String x:Key="ModsUIFeatureCode"         >Este mod contiene cambios al código del juego.</system:String>
+    <system:String x:Key="ModsUIFeatureCodeDisable"  >Este mod no contiene cambios al código del juego.</system:String>
     <system:String x:Key="ModsUIModDragDrop"    >Arrastre y suelte elementos para cambiar el orden de carga de mods</system:String>
     <system:String x:Key="ModsUISearch"         >Buscar:</system:String>
     <system:String xml:space="preserve" x:Key="ModsUIInvalidIncludeDirs">Hedge Mod Manager ha detectado que uno o más mods incluyen directorios inválidos.&#x0a;¿Quieres que Hedge Mod Manager intente arreglarlo?</system:String>
@@ -78,7 +78,7 @@
     <system:String x:Key="SettingsUIEnableML"       >Activar cargador de mods</system:String>
     <system:String x:Key="SettingsUIEnableDebug"    >Activar consola de depuración</system:String>
     <system:String x:Key="SettingsUIEnableSRedir"   >Activar redirección de partida guardada</system:String>
-    <system:String x:Key="SettingsUIUseLauncher"    >Mostrar Lanzador del juego</system:String>
+    <system:String x:Key="SettingsUIUseLauncher"    >Usar lanzador del juego</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >Cargadores:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >Juego:</system:String>
     <system:String x:Key="SettingsUILabelProfile"   >Perfil:</system:String>
@@ -93,16 +93,16 @@
     <system:String x:Key="SettingsUIAboutHMM"       >Acerca de Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUILanguage"       >Idioma:</system:String>
     <system:String x:Key="SettingsUITheme"          >Tema:</system:String>
-    <system:String x:Key="SettingsUIReleaseChannel" >Canal de actualizaciones:</system:String>
-    <system:String x:Key="SettingsUIChangingChannelTitle" >Cambiar canal de actualizaciones</system:String>
+    <system:String x:Key="SettingsUIReleaseChannel" >Canal de actualización:</system:String>
+    <system:String x:Key="SettingsUIChangingChannelTitle" >Cambiar canal de actualización</system:String>
     <system:String x:Key="SettingsUIChangeChannelRel" xml:space="preserve">Vas a cambiar al canal de Lanzamiento.&#x0a;&#x0a;¿Seguro que quieres continuar? Hedge Mod Manager necesita reiniciar para cambiar canal.</system:String>
-    <system:String x:Key="SettingsUIChangeChannelDev" xml:space="preserve">Vas a cambiar al canal de En Desarrollo. Este canal puede contener funciones experimentales y errores.&#x0a;&#x0a;¿Seguro que quieres continuar? Hedge Mod Manager necesita reiniciar para cambiar canal.</system:String>
+    <system:String x:Key="SettingsUIChangeChannelDev" xml:space="preserve">Vas a cambiar al canal de Desarrollo. Este canal puede contener funciones experimentales y errores.&#x0a;&#x0a;¿Seguro que quieres continuar? Hedge Mod Manager necesita reiniciar para cambiar canal.</system:String>
 
     <!-- MainWindow UI Strings -->
-    <system:String x:Key="MainUIInstallFormHeader"   >Instalando un mod de...</system:String>
-    <system:String x:Key="MainUIInstallFormOptionDir">Instalando de una carpeta</system:String>
-    <system:String x:Key="MainUIInstallFormOptionArc">Instalando de un archivo comprimido</system:String>
-    <system:String x:Key="MainUIInstallFormOptionNew">Creando mod (¡Para desarrolladores!)</system:String>
+    <system:String x:Key="MainUIInstallFormHeader"   >Instalar un mod usando...</system:String>
+    <system:String x:Key="MainUIInstallFormOptionDir">Instalación desde una carpeta</system:String>
+    <system:String x:Key="MainUIInstallFormOptionArc">Instalación desde un archivo comprimido</system:String>
+    <system:String x:Key="MainUIInstallFormOptionNew">Creando un mod (¡Para desarrolladores!)</system:String>
     <system:String x:Key="MainUIMissingLoaderHeader" >¡Cargador de mods no instalado!</system:String>
     <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc">Para que {0} cargue mods, se debe instalar el cargador de mods. ¿Quieres instalarlo?</system:String>
     <system:String x:Key="MainUISelectModsDBTitle"   >Selecciona de dónde cargar mods...</system:String>
@@ -119,8 +119,8 @@
 
     <!-- AboutWindow UI Strings -->
     <system:String x:Key="AboutWindowUITitle"  >Sobre Hedge Mod Manager</system:String>
-    <system:String x:Key="AboutWindowUILine1"  >Un programa diseñado para cargar mods de juegos hechos con el Hedgehog Engine</system:String>
-    <system:String x:Key="AboutWindowUILine2"  >Necesita una versión legal de cualquiera de los juegos soportados.</system:String>
+    <system:String x:Key="AboutWindowUILine1"  >Un programa diseñado para cargar facilmente mods de juegos hechos con el Hedgehog Engine</system:String>
+    <system:String x:Key="AboutWindowUILine2"  >Requiere una versión legalmente adquirida de cualquiera de los juegos soportados.</system:String>
     <system:String x:Key="AboutWindowUICredits">Créditos:</system:String>
     <system:String x:Key="AboutWindowUITranslators">Traductores</system:String>
 
@@ -150,7 +150,7 @@
 
     <!-- Status UI Strings -->
     <system:String x:Key="StatusUILoadedMods"             >Cargados {0} mods</system:String>
-    <system:String x:Key="StatusUICheckingModUpdates"     >Obteniendo actualizaciones de {0}</system:String>
+    <system:String x:Key="StatusUICheckingModUpdates"     >Comprobando actualizaciones de {0}</system:String>
     <system:String x:Key="StatusUIFailedToUpdate"         >¡Error al actualizar {0}! {1}</system:String>
     <system:String x:Key="StatusUIModUpdateCheckFinish"   >Revisión de Actualizaciones: {0} completadas, {1} fallidas</system:String>
     <system:String x:Key="StatusUIStartingGame"           >Iniciando {0}</system:String>
@@ -160,19 +160,19 @@
     <system:String x:Key="StatusUICheckingForLoaderUpdate">Obteniendo actualizaciones de {0}</system:String>
     <system:String x:Key="StatusUILoaderUpToDate"         >{0} esta en la versión mas reciente</system:String>
     <system:String x:Key="StatusUIFailedLoaderUpdateCheck">Error al revisar actualizaciones de {0}</system:String>
-    <system:String x:Key="StatusUIInstalledLoader"        >Instalado {0}</system:String>
-    <system:String x:Key="StatusUIDeletedMod"             >Borrado {0}</system:String>
-    <system:String x:Key="StatusUIModsDBSaved"            >Guardada base de datos</system:String>
+    <system:String x:Key="StatusUIInstalledLoader"        >{0} Instalado</system:String>
+    <system:String x:Key="StatusUIDeletedMod"             >{0} Borrado</system:String>
+    <system:String x:Key="StatusUIModsDBSaved"            >Guardada base de datos de mods</system:String>
     <system:String x:Key="StatusUIModsDBLocationChanged"  >Cambio de ubicación de la base de datos</system:String>
     <system:String x:Key="StatusUIGameChange"             >Cambio de juego a {0}</system:String>
-    <system:String x:Key="StatusUIDownloadingCodes"       >Descargando trucos para {0}</system:String>
+    <system:String x:Key="StatusUIDownloadingCodes"       >Descargando códigos para {0}</system:String>
     <system:String x:Key="StatusUIDownloadFinished"       >Descarga finalizada</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >Descarga fallida</system:String>
     <system:String x:Key="StatusUICodeUpdatesAvailable"   >¡Actualización de códigos disponible!</system:String>
     <system:String x:Key="StatusUINoCodeUpdatesFound"     >No se han encontrado actualizaciones de códigos.</system:String>
 
     <!-- Dialog UI Strings -->
-    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">Hedge Mod Manager no puede acceder a la carpeta del juego.&#x0a;Asegurate que el grupo Usuarios tiene el permiso &quot;Escribir&quot; en Permitir en la siguiente carpeta y todas sus subcarpetas y archivos.&#x0a;&#x0a;{0}</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">Hedge Mod Manager no puede acceder a la carpeta del juego.&#x0a;Asegurate que el grupo Usuarios tiene el permiso &quot;Escritura&quot; en Permitir en la siguiente carpeta y todas sus subcarpetas y archivos.&#x0a;&#x0a;{0}</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">¿Quieres borrar "{0}"?&#x0a;¡Ésta acción no puede deshacerse!</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModNewest"      >{0} esta actualizado.</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModUpdate"      >Una nueva versión de {0} está disponible! ({1})</system:String>
@@ -182,7 +182,7 @@
     <!-- Status UI Lang Stuff Strings -->
     <system:String x:Key="StatusUIUpdateCompletedSingular"      >completado</system:String>
     <system:String x:Key="StatusUIUpdateCompletedPlural"        >completados</system:String>
-    <system:String x:Key="StatusUIUpdateFailedSingular"         >fallidos</system:String>
+    <system:String x:Key="StatusUIUpdateFailedSingular"         >fallido</system:String>
     <system:String x:Key="StatusUIUpdateFailedPlural"           >fallidos</system:String>
 
     <!-- Mod Config UI Strings -->
@@ -195,7 +195,7 @@
     <system:String x:Key="ModDescriptionUIDate">el</system:String>
 
     <!-- Mod Downloader Strings -->
-    <system:String x:Key="ModDownloaderFailed">Descarga del mod fallida</system:String>
+    <system:String x:Key="ModDownloaderFailed">Fallo al Descargar mod</system:String>
     <system:String xml:space="preserve" x:Key="ModDownloaderWebError">Ocurrió un error en la descarga. Los servidores están sobrecargados o caídos. Intenta de nuevo más tarde. &#x0a;&#x0a;Detalles: {0}</system:String>
     <system:String x:Key="ModDownloaderNoGame">Fallo al buscar juego</system:String>
     <system:String x:Key="ModDownloaderNoGameMes">Hedge Mod Manager no pudo encontrar la instalacion de {0}</system:String>
@@ -221,7 +221,7 @@
     <!-- Themes -->
     <system:String x:Key="ThemeDark"  >Oscuro</system:String>
     <system:String x:Key="ThemeDarker">Mas Oscuro</system:String>
-    <system:String x:Key="ThemeOLED"  >Pantalla OLED</system:String>
+    <system:String x:Key="ThemeOLED"  >OLED</system:String>
     <system:String x:Key="ThemeLight" >Claro</system:String>
 
     <!-- Games -->
