--- a/HedgeModManager/Languages/Languages.xaml
+++ b/HedgeModManager/Languages/Languages.xaml
@@ -14,7 +14,7 @@
         <local:LangEntry FileName="zh-TW" Name="中文繁體 (Chinese Traditional)"/>
         <local:LangEntry FileName="zh-CN" Name="中文简体 (Chinese Simplified)"/>
         <local:LangEntry FileName="ru-RU" Name="Русский (Russian)"/>
-        <local:LangEntry FileName="es-MX" Name="Espanõl (Mexico)"/>
+        <local:LangEntry FileName="es-MX" Name="Español (Mexico)"/>
         <local:LangEntry FileName="vi-VN" Name="Tiếng Việt (Vietnamese)"/>
         <local:LangEntry FileName="it-IT" Name="Italiano (Italy)"/>
     </local:LanguageList>
