--- a/HedgeModManager/UI/GBModWindow.xaml
+++ b/HedgeModManager/UI/GBModWindow.xaml
@@ -36,7 +36,10 @@
                         <Label Padding="7,0,0,0" Content="{Binding ItemType, FallbackValue=Type}" FontSize="12"/>
                     </StackPanel>
                     <ScrollViewer Grid.Row="1" Margin="0,0,5,0">
-                        <wpf:HtmlPanel x:Name="Description" Background="Transparent"/>
+                        <Grid>
+                            <wpf:HtmlPanel x:Name="Description" Background="Transparent"/>
+                            <TextBlock x:Name="DescriptionText" Width="Auto" Height="Auto" Background="Transparent" Visibility="Collapsed"/>
+                        </Grid>
                     </ScrollViewer>
                 </Grid>
                 <Grid Grid.Column="1">
