--- a/HedgeModManager/Languages/ja-JP.xaml
+++ b/HedgeModManager/Languages/ja-JP.xaml
@@ -229,7 +229,7 @@
     <system:String x:Key="GameSonicLostWorld">Sonic Lost World - ソニックロストワールド</system:String>
     <system:String x:Key="GameSonicForces">Sonic Forces - ソニックフォース</system:String>
     <system:String x:Key="GamePuyoPuyoTetris2">Puyo Puyo Tetris 2 - ぷよぷよテトリス2</system:String>
-    <system:String x:Key="GameTokyo2020">Olympic Games Tokyo 2020</system:String>
+    <system:String x:Key="GameTokyo2020">Olympic Games Tokyo 2020 - 東京2020オリンピック</system:String>
     <system:String x:Key="GameSonicColorsUltimate">Sonic Colors: Ultimate - ソニックカラーズ: アルティメット</system:String>
     <system:String x:Key="GameSonicOrigins">Sonic Origins - ソニックオリジンズ</system:String>
     <system:String x:Key="GameSonicFrontiers">Sonic Frontiers - ソニックフロンティア</system:String>
